fix challenge alignment (#433)

--- a/app/assets/stylesheets/layouts/challenge_admin.scss
+++ b/app/assets/stylesheets/layouts/challenge_admin.scss
@@ -71,9 +71,11 @@
           -moz-appearance: none;
           appearance: none;
           background-color: var(--primary);
-          color: #ddd;
+          color: #fff;
           font-weight: 700;
           text-transform: uppercase;
+          border-radius: 0.5rem;
+          border: none;
         }
       }
 
